# icapture-rs

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: ci.yml
icapture_cli/: Cargo.toml
icapture_cli/src/: main.rs
icapture_cli/wix/: License.rtf  main.wxs
icapture_core/: Cargo.toml
icapture_core/resources/: config.json
icapture_core/src/: capture.rs  codec.rs  config.rs  device.rs  lib.rs
icapture_core/src/capture/: codec.rs  device.rs  file.rs
icapture_srv/: Cargo.toml
icapture_srv/src/: main.rs  server.rs
icapture_srv/src/server/: error.rs
src/: main.rs
