[package]
name = "icapture_cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for capturing images and video on Windows"
repository = "https://github.com/katediadechko/icapture-rs"
license = "MIT"
#default-run = "icapture_cli"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
icapture_core = { path = "../icapture_core" }
