[package]
name = "icapture_core"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.92.2", features = ["clang-runtime"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Media_MediaFoundation", "Win32_System_Com"]

[lib]
name = "icapture_core"
path = "src/lib.rs"
