[package]
name = "icapture_srv"
version = "0.1.0"
edition = "2021"
description = "Server for capturing images and video on Windows"
repository = "https://github.com/katediadechko/icapture-rs"
license = "MIT"
#default-run = "icapture_srv"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
